--- a/app/src/main/res/layout/fragment_driver_profile.xml
+++ b/app/src/main/res/layout/fragment_driver_profile.xml
@@ -77,6 +77,23 @@
             android:textSize="18sp"
             android:textStyle="bold"
             android:textColor="@color/text_color"
+            android:layout_gravity="center" />
+        <TextView
+            android:id="@+id/tv_university"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Universidad Nacional"
+            android:textSize="14sp"
+            android:textColor="@color/text_color"
+            android:layout_gravity="center" />
+
+        <TextView
+            android:id="@+id/tv_email"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="usuario@email.com"
+            android:textSize="14sp"
+            android:textColor="#888888"
             android:layout_gravity="center"
             android:layout_marginBottom="24dp" />
 
