--- a/app/src/main/res/layout/fragment_recover_password.xml
+++ b/app/src/main/res/layout/fragment_recover_password.xml
@@ -23,8 +23,7 @@
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="@id/guideline"
-        >
+        app:layout_constraintBottom_toBottomOf="@id/guideline">
 
         <ImageView
             android:id="@+id/imageView2"
@@ -43,8 +42,7 @@
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/white"
-        >
+        android:background="@color/white">
 
         <TextView
             android:id="@+id/textView2"
@@ -56,8 +54,7 @@
             android:layout_marginBottom="35dp"
             android:textSize="24sp"
             android:textStyle="bold"
-            android:textColor="@color/text_color"
-            />
+            android:textColor="@color/text_color" />
 
         <TextView
             android:id="@+id/textView3"
@@ -68,7 +65,7 @@
             android:textAlignment="center"
             android:textSize="18sp"
             android:layout_gravity="center"
-            android:layout_marginBottom="30dp"/>
+            android:layout_marginBottom="30dp" />
 
         <EditText
             android:id="@+id/email"
@@ -78,34 +75,7 @@
             android:hint="@string/institutional_email"
             android:inputType="textEmailAddress"
             android:layout_marginStart="20dp"
-            android:layout_marginEnd="20dp"/>
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:orientation="horizontal">
-
-            <EditText
-                android:id="@+id/code"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginStart="20dp"
-                android:layout_marginTop="15dp"
-                android:layout_marginEnd="20dp"
-                android:ems="8"
-                android:hint="@string/code"
-                android:inputType="text" />
-
-            <Button
-                android:id="@+id/sendCodeButton"
-                android:layout_gravity="bottom"
-                android:layout_width="100dp"
-                android:layout_height="wrap_content"
-                android:backgroundTint="@color/secondary_color"
-                android:textColor="@color/white"
-                android:textStyle="italic"
-                android:text="@string/send_code" />
-        </LinearLayout>
+            android:layout_marginEnd="20dp" />
 
         <Button
             android:id="@+id/recoverButton"
