--- a/app/src/main/res/layout/bottom_sheet_travel_detail.xml
+++ b/app/src/main/res/layout/bottom_sheet_travel_detail.xml
@@ -1,11 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/layout_travel_detail"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical"
     android:background="@drawable/bg_bottom_sheet"
     android:padding="24dp">
+
+    <ImageButton
+        android:id="@+id/btnClose"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:backgroundTint="#F0F0F0"
+        android:background="@drawable/bg_circle"
+        android:layout_gravity="end"
+        android:layout_marginBottom="20dp"
+        app:srcCompat="@drawable/ic_xmark" />
 
     <LinearLayout
         android:layout_width="match_parent"
