--- a/app/src/main/res/layout/bottom_sheet_travel_detail.xml
+++ b/app/src/main/res/layout/bottom_sheet_travel_detail.xml
@@ -180,6 +180,15 @@
         android:layout_marginBottom="12dp" />
 
     <Button
+        android:id="@+id/btnMessage"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Contacta al conductor"
+        android:layout_gravity="center"
+        android:backgroundTint="@color/status_accepted"
+        />
+
+    <Button
         android:id="@+id/btnRequest"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
