--- a/app/src/main/res/layout/item_vehicle.xml
+++ b/app/src/main/res/layout/item_vehicle.xml
@@ -77,7 +77,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent" />
 
-        <ImageButton
+        <ImageView
                 android:id="@+id/btn_edit"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
@@ -85,6 +85,8 @@
                 android:src="@drawable/ic_edit"
                 app:tint="@color/main_color"
                 android:contentDescription="Editar vehículo"
+                android:clickable="true"
+                android:focusable="true"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
