--- a/app/src/main/res/layout/fragment_passenger_profile.xml
+++ b/app/src/main/res/layout/fragment_passenger_profile.xml
@@ -100,10 +100,11 @@
                 android:gravity="center">
 
                 <TextView
+                    android:id="@+id/tvTrips"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="12"
-                    android:textSize="18sp"
+                    android:textSize="24sp"
                     android:textStyle="bold"
                     android:textColor="@color/text_color" />
 
@@ -126,10 +127,11 @@
                 android:gravity="center">
 
                 <TextView
+                    android:id="@+id/tvRating"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="4.8"
-                    android:textSize="18sp"
+                    android:textSize="24sp"
                     android:textStyle="bold"
                     android:textColor="@color/text_color" />
 
@@ -152,10 +154,11 @@
                 android:gravity="center">
 
                 <TextView
+                    android:id="@+id/tvReviews"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="23"
-                    android:textSize="18sp"
+                    android:text="2"
+                    android:textSize="24sp"
                     android:textStyle="bold"
                     android:textColor="@color/text_color" />
 
